update info page

--- a/map.html
+++ b/map.html
@@ -24,7 +24,7 @@
         <ul id="sidenav-1" class="sidenav sidenav-fixed blue-grey darken-4" >
             <li><a class="waves-effect" href="index.html"><i class="material-icons">timeline</i>Stats</a></li>
             <li><a class="waves-effect" href="map.html"><i class="material-icons">map</i>Map</a></li>
-            <li><a class="waves-effect" href="what-to-know.html"><i class="material-icons">warning</i>What to Know</a></li>
+            <li><a class="waves-effect" href="info.html"><i class="material-icons">warning</i>What to Know</a></li>
             <li><a class="waves-effect" href="news.html"><i class="material-icons">announcement</i>News</a></li>
             <li><div class="divider"></div></li>
             <li><a class="waves-effect" href="contact.html" ><i class="material-icons">email</i>Contact</a></li>
